# qmltrain

./: .editorconfig  CMakeLists.txt
misc/: pictures.qrc
qml/: ContactModel.qml  Main.qml  ScrollablePage.qml
qml/pages/: LinksPage.qml  SubScribePage.qml  TabBar.qml
qml/pages/SubScribePage/: OverViewDelegate.qml  SubScribeDelegate.qml
qml/pages/TabBar/: SubScribeDelegate.qml
src/: Commandline.cpp  Commandline.h  Interface.cpp  Interface.h  ProgressStatus.cpp  ProgressStatus.h  StyleSettings.cpp  StyleSettings.h  SubScribesModel.cpp  SubScribesModel.h  main.cpp
src/ProgressStatus/: ChartValueModel.cpp  ChartValueModel.h
